==> bimanpaulsamsung/st-device-sdk-c/src/port/bsp/cc3220sf/iot_bsp_wifi_cc3220sf.c <==
#include <time.h>
#include <unistd.h>
#include <iot_bsp_wifi.h>
#include "iot_os_util.h"
#include "iot_debug.h"
#include <ti/drivers/net/wifi/simplelink.h>
#include <ti/drivers/net/wifi/wlan.h>
#include <ti/net/sntp/sntp.h>
#define IOT_CC3220SF_MAX_SCAN (30)
#define IOT_CC3220SF_MAX_SCAN_TRAILS (10)
#define SL_STOP_TIMEOUT (200)
#define TIME_BASEDIFF        ((((uint32_t)70 * 365 + 17) * 24 * 3600))
#define TIME_NTP_TO_LOCAL(t) ((t) - TIME_BASEDIFF)
#define DHCP_LEASE_TIME 4096
#define NTP_REPLY_WAIT_TIME 5
#define CLR_STATUS_BIT_ALL(status_variable)  (status_variable = 0)
#define SET_STATUS_BIT(status_variable, bit) (status_variable |= (1 << (bit)))
#define CLR_STATUS_BIT(status_variable, bit) (status_variable &= ~(1 << (bit)))
#define CLR_STATUS_BIT_ALL(status_variable)  (status_variable = 0)
#define GET_STATUS_BIT(status_variable, bit) (0 != \
                                              (status_variable & (1 << (bit))))
#define IS_CONNECTED(status_variable)        GET_STATUS_BIT( \
		status_variable, \
		STATUS_BIT_CONNECTION)
#define IS_IP_ACQUIRED(status_variable)      GET_STATUS_BIT( \
		status_variable, \
		STATUS_BIT_IP_ACQUIRED)

static void _obtain_time(void)
{
	struct tm *timeinfo;
	int retry = 0;
	const int retry_count = 10;
	uint64_t ntpTimeStamp;
	uint32_t currentTime;
	int32_t retval;
	time_t ts;
	SlNetSock_Timeval_t timeval;
	struct timespec tspec;

	/* Set timeout value for NTP server reply */
	timeval.tv_sec = NTP_REPLY_WAIT_TIME;
	timeval.tv_usec = 0;

	while (++retry < retry_count) {
		/* Get the time use the built in NTP server list: */
		retval = SNTP_getTime(srvList, sizeof(srvList) / sizeof(srvList[0]), &timeval, &ntpTimeStamp);
		if (!retval) {
			//set time to local
			currentTime = ntpTimeStamp >> 32;
			currentTime = TIME_NTP_TO_LOCAL(currentTime);

			tspec.tv_nsec = 0;
			tspec.tv_sec = currentTime;
			if (clock_settime(CLOCK_REALTIME, &tspec) != 0) {
				IOT_ERROR("Failed to set current time");
			}

			//print time
			ts = time(NULL);
			timeinfo = localtime(&ts);
			IOT_INFO("Current time is %d-%d-%d %d:%d:%d",
					timeinfo->tm_year + 1900,
					timeinfo->tm_mon + 1,
					timeinfo->tm_mday,
					timeinfo->tm_hour,
					timeinfo->tm_min,
					timeinfo->tm_sec
			);
			break;
		} else {
			IOT_INFO("[IOT_BSP_WIFI] Waiting for system time to be set... (%d/%d),error code %d", retry, retry_count, retval);
			IOT_DELAY(2000);
			IOT_INFO("[IOT_BSP_WIFI] _obtain_time: retrying ...");
		}
	}
}

iot_error_t iot_bsp_wifi_set_mode(iot_wifi_conf *conf)
{
	int32_t sl_ret_val = -1;
	time_t now;
	struct tm *timeinfo;
	int str_len = 0;
	SlWlanSecParams_t secParams;
	iot_error_t iot_ret = IOT_ERROR_NONE;

	memset(&secParams, 0 , sizeof(SlWlanSecParams_t));
	str_len = strlen(conf->pass);

	if (str_len == 0) {
		secParams.Type = SL_WLAN_SEC_TYPE_OPEN;
	} else {
		secParams.Type = SL_WLAN_SEC_TYPE_WPA_WPA2;
		secParams.Key = (char *)malloc((str_len + 1) * sizeof(char));
		if (!secParams.Key) {
			IOT_ERROR("Malloc failed");
			return IOT_ERROR_MEM_ALLOC;
		}
		memcpy(secParams.Key, conf->pass, str_len + 1);
		secParams.KeyLen = str_len;
	}

	switch(conf->mode) {
	case IOT_WIFI_MODE_OFF:
		sl_Stop(0);
		sl_Start(NULL, NULL, NULL);
	break;
	case IOT_WIFI_MODE_SCAN:
		IOT_INFO("iot_bsp_wifi_set_mode set SCAN mode");
	break;
	case IOT_WIFI_MODE_STATION:
		sl_WlanSetMode(ROLE_STA);
		sl_Stop(SL_STOP_TIMEOUT);
		sl_ret_val = sl_Start(NULL, NULL, NULL);
		if (sl_ret_val != ROLE_STA) {
			IOT_ERROR("iot_bsp_wifi_set_mode set SCAN mode failed!");
			iot_ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}

		//connect to AP
        sl_ret_val = sl_WlanConnect((const signed char *)(conf->ssid), strlen((const signed char *)(conf->ssid)), 0, &secParams, 0);
		if (sl_ret_val) {
			IOT_ERROR("Connection failed %d !", sl_ret_val);
			iot_ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}

		g_usConnectIndex = 0;
		while (g_usConnectIndex < 10){
			IOT_DELAY(1000);

			if(IS_CONNECTED(g_ulStatus) && IS_IP_ACQUIRED(g_ulStatus)) {
				break;
			}
			g_usConnectIndex++;
		}

		if (g_usConnectIndex == 10) {
			IOT_ERROR("WIFI_STA_CONNECT_BIT event Timeout");
			sl_Stop(SL_STOP_TIMEOUT);
			iot_ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}

		time(&now);
		timeinfo = localtime(&now);
		if (timeinfo->tm_year < (2016 - 1900)) {
			IOT_INFO("Time is not set yet. Connecting to WiFi and getting time over NTP.");
			_obtain_time();
		}
	break;
	case IOT_WIFI_MODE_SOFTAP:
		/* set SSID name */
		sl_WlanSet(SL_WLAN_CFG_AP_ID, SL_WLAN_AP_OPT_SSID,
				strlen((const char *)(conf->ssid)),
				(unsigned char*)(conf->ssid));

		/* Set security type */
		sl_WlanSet(SL_WLAN_CFG_AP_ID, SL_WLAN_AP_OPT_SECURITY_TYPE, 1, &secParams.Type);

		/* Set password (if needed) */
		if (secParams.Type != SL_WLAN_SEC_TYPE_OPEN) {
			sl_WlanSet(SL_WLAN_CFG_AP_ID, SL_WLAN_AP_OPT_PASSWORD,
						strlen((const char *)(conf->pass)),
						(unsigned char*)(conf->pass));
		}

		uint8_t channel = 6;	//#define SOFTAP_CHANNEL 6
		/* Set channel number */
		sl_WlanSet(SL_WLAN_CFG_AP_ID, SL_WLAN_AP_OPT_CHANNEL,
						sizeof(channel),
						(unsigned char *)(&channel));

		sl_WlanDisconnect();
		sl_WlanSetMode(ROLE_AP);		  /* Set device role as AP */
		/* Restart the NWP so the new configuration will take affect */
		sl_Stop(SL_STOP_TIMEOUT);
		sl_ret_val = sl_Start(NULL, NULL, NULL);
		if (sl_ret_val != ROLE_AP) {
			IOT_ERROR("Unable to configure AP role");
			iot_ret = IOT_ERROR_CONN_OPERATE_FAIL;
			goto out;
		}

		SlNetCfgIpV4Args_t ipV4;
		ipV4.Ip 		 = (_u32)SL_IPV4_VAL(192, 168, 4, 1);
		ipV4.IpMask 	 = (_u32)SL_IPV4_VAL(255, 255 , 255, 0);
		ipV4.IpGateway	 = (_u32)SL_IPV4_VAL(192, 168, 4, 1);
		sl_NetCfgSet(SL_NETCFG_IPV4_AP_ADDR_MODE, SL_NETCFG_ADDR_STATIC, sizeof(SlNetCfgIpV4Args_t), (_u8 *)&ipV4);
		/* Restart the NWP so the new configuration will take affect */
		sl_Stop(0);
		sl_Start(NULL, NULL, NULL);

		//set DHCP ip region
		SlNetAppDhcpServerBasicOpt_t dhcpParams;
		_u8 outLen = sizeof(SlNetAppDhcpServerBasicOpt_t);
		dhcpParams.lease_time	   =  DHCP_LEASE_TIME;
		// lease time (in seconds) of the IP Address
		dhcpParams.ipv4_addr_start =  SL_IPV4_VAL(192, 168, 4, 2);
		// first IP Address for allocation. IP Address should be set as Hex number - i.e. 0A0B0C01 for (10.11.12.1)
		dhcpParams.ipv4_addr_last  =  SL_IPV4_VAL(192, 168, 4, 254);
		// last IP Address for allocation. IP Address should be set as Hex number - i.e. 0A0B0C01 for (10.11.12.1)
		sl_NetAppStop(SL_NETAPP_DHCP_SERVER_ID);
		// Stop DHCP server before settings
		sl_NetAppSet(SL_NETAPP_DHCP_SERVER_ID, SL_NETAPP_DHCP_SRV_BASIC_OPT, outLen, (_u8 *)&dhcpParams);
		// set parameters
		sl_NetAppStart(SL_NETAPP_DHCP_SERVER_ID);
		// Start DHCP server with new settings
		break;
	default:
		break;
	}

out:
	if (secParams.Key) {
		free(secParams.Key);
	}

	return iot_ret;
}

uint16_t iot_bsp_wifi_get_scan_result(iot_wifi_scan_result_t *scan_result)
{
	uint8_t i;	
	int16_t resultsCount;
	uint8_t triggeredScanTrials = 0;

	resultsCount = sl_WlanGetNetworkList(0, IOT_CC3220SF_MAX_SCAN, &netEntries[0]);

	/* If scan policy isn't set, invoking 'sl_WlanGetNetworkList()'
	 * for the first time triggers 'one shot' scan.
	 * The scan parameters would be according to the system persistent
	 * settings on enabled channels.
	 * For more information, see: <simplelink user guide, page: pr.>
	 */
	if (SL_ERROR_WLAN_GET_NETWORK_LIST_EAGAIN == resultsCount) {
		while (triggeredScanTrials < IOT_CC3220SF_MAX_SCAN_TRAILS) {
			/* We wait for one second for the NWP to complete
			the initiated scan and collect results */
			IOT_DELAY(1000);

			/* Collect results form one-shot scans.*/
			resultsCount = sl_WlanGetNetworkList(0, IOT_CC3220SF_MAX_SCAN, &netEntries[0]);
			if (resultsCount > 0) {
				break;
			} else {
				/* If NWP results aren't ready,
				try 'MAX_SCAN_TRAILS' attempts to get results */
				triggeredScanTrials++ ;
			}
		}
	}

	if (resultsCount <= 0) {
		IOT_ERROR("[scan] : Unable to retrieve the network list");
		return 0;
	}

	if (resultsCount > IOT_WIFI_MAX_SCAN_RESULT) {
		resultsCount = IOT_WIFI_MAX_SCAN_RESULT;
	}
	
	int ssid_len = 0;
	for (i = 0; i < resultsCount; i++) {
		ssid_len = strlen((char *)netEntries[i].Ssid);
		if (ssid_len >= IOT_WIFI_MAX_SSID_LEN) {
			ssid_len = IOT_WIFI_MAX_SSID_LEN - 1;
		}
		memset(scan_result[i].ssid, 0, IOT_WIFI_MAX_SSID_LEN);
		memcpy(scan_result[i].ssid, netEntries[i].Ssid, ssid_len);
		memcpy(scan_result[i].bssid, netEntries[i].Bssid, IOT_WIFI_MAX_BSSID_LEN);

		scan_result[i].rssi = netEntries[i].Rssi;
		scan_result[i].freq = iot_util_convert_channel_freq(netEntries[i].Channel);
		scan_result[i].authmode = _cc3220sf_sec_to_auth(SL_WLAN_SCAN_RESULT_SEC_TYPE_BITMAP(netEntries[i].SecurityInfo));

		IOT_DEBUG("CC3220SF ssid=%s, mac=%02X:%02X:%02X:%02X:%02X:%02X, rssi=%d, freq=%d, authmode=%d chan=%d",
				scan_result[i].ssid,
				scan_result[i].bssid[0], scan_result[i].bssid[1], scan_result[i].bssid[2],
				scan_result[i].bssid[3], scan_result[i].bssid[4], scan_result[i].bssid[5], scan_result[i].rssi,
				scan_result[i].freq, scan_result[i].authmode, netEntries[i].Channel);
	}

	return resultsCount;
}

iot_error_t iot_bsp_wifi_get_mac(struct iot_mac *wifi_mac)
{
	int32_t status = -1;
	uint16_t macAddressLen = SL_MAC_ADDR_LEN;
	status = sl_NetCfgGet(SL_NETCFG_MAC_ADDRESS_GET, 0, &macAddressLen, wifi_mac);
	if (status < 0) {
		return IOT_ERROR_READ_FAIL;
	}

	return IOT_ERROR_NONE;
}
